src/test/deca/syntax/valid/false_true.deca
// Description:
//    Affichage de true et false
//
// Resultats:
//    true false
//
// Historique:
//    cree le 12/01/2021

{print(false,true);}
